--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -8,3 +8,15 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
     }
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'io.reactivex:rxjava:1.0.12'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.robolectric:robolectric:2.4'
+}
