--- a/rxlifecycle-components/build.gradle
+++ b/rxlifecycle-components/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 
     compile 'io.reactivex:rxjava:1.0.12'
 
+    compile 'com.android.support:appcompat-v7:22.2.1'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:3.0'
