--- a/rxlifecycle-components/build.gradle
+++ b/rxlifecycle-components/build.gradle
@@ -25,3 +25,5 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:3.0'
 }
+
+apply from: "$rootDir/gradle/artifacts.gradle"
