--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -20,3 +20,5 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:2.4'
 }
+
+apply from: "$rootDir/gradle/artifacts.gradle"
