--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,15 @@
-# Project-wide Gradle settings.
+GROUP=com.trello
+VERSION_NAME=0.1.0-SNAPSHOT
+VERSION_CODE=1
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+POM_URL=https://github.com/trello/RxLifecycle
+POM_SCM_URL=https://github.com/trello/RxLifecycle
+POM_SCM_CONNECTION=scm:git:https://github.com/trello/RxLifecycle.git
+POM_SCM_DEV_CONNECTION=scm:git:git@github.com:trello/RxLifecycle.git
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+POM_DEVELOPER_ID=dlew
+POM_DEVELOPER_NAME=Dan Lew
