--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
     }
 }
 
+subprojects {
+    group = GROUP
+    version = VERSION_NAME
+}
+
 ext {
     minSdkVersion = 15
     compileSdkVersion = 22
