--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,13 @@ subprojects {
 ext {
     minSdkVersion = 14
     compileSdkVersion = 22
+    targetSdkVersion = compileSdkVersion
     buildToolsVersion = '22.0.1'
+
+    // Define all dependencies in the base project, to unify & make it easy to update
+    rxJava = 'io.reactivex:rxjava:1.0.13'
+    appCompat = 'com.android.support:appcompat-v7:22.2.1'
+    junit = 'junit:junit:4.12'
+    mockito = 'org.mockito:mockito-core:1.10.19'
+    robolectric = 'org.robolectric:robolectric:3.0'
 }
