--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -14,11 +14,11 @@ repositories {
 }
 
 dependencies {
-    compile 'io.reactivex:rxjava:1.0.12'
+    compile rootProject.ext.rxJava
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.robolectric:robolectric:3.0'
+    testCompile rootProject.ext.junit
+    testCompile rootProject.ext.mockito
+    testCompile rootProject.ext.robolectric
 }
 
 apply from: "$rootDir/gradle/artifacts.gradle"
