Use RxBinding 0.2.0 and make bindView use its detaches() call under the hood
Simplifies things

--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     compile rootProject.ext.rxJava
+    compile rootProject.ext.rxBinding
 
     testCompile rootProject.ext.junit
     testCompile rootProject.ext.mockito
