--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
 
     // Define all dependencies in the base project, to unify & make it easy to update
     rxJava = 'io.reactivex:rxjava:1.0.14'
+    rxBinding = 'com.jakewharton.rxbinding:rxbinding:0.2.0'
     appCompat = 'com.android.support:appcompat-v7:23.0.0'
     junit = 'junit:junit:4.12'
     mockito = 'org.mockito:mockito-core:1.10.19'
