Add fullBackupContent to Sample Android Manifest

--- a/rxlifecycle-sample/src/main/AndroidManifest.xml
+++ b/rxlifecycle-sample/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     >
 
     <application
+        android:fullBackupContent="false"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
