--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ ext {
     // Define all dependencies in the base project, to unify & make it easy to update
     rxJava = 'io.reactivex:rxjava:1.0.16'
     rxBinding = 'com.jakewharton.rxbinding:rxbinding:0.3.0'
+    navi = 'com.trello:navi:0.1.3'
     appCompat = 'com.android.support:appcompat-v7:23.1.1'
     junit = 'junit:junit:4.12'
     mockito = 'org.mockito:mockito-core:1.10.19'
