add customTransfer input to use one  compose process thread scheduling and life cycle

--- a/rxlifecycle-sample/build.gradle
+++ b/rxlifecycle-sample/build.gradle
@@ -20,6 +20,6 @@ repositories {
 
 dependencies {
     compile project(':rxlifecycle-components')
-
+    compile rootProject.ext.rxAndroid
     compile rootProject.ext.appCompat
 }
