rxlifecycle-kotlin module added with bind() syntax

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':rxlifecycle'
+include ':rxlifecycle', ':rxlifecycle-kotlin'
 include ':rxlifecycle-components'
 include ':rxlifecycle-navi'
 include ':rxlifecycle-sample'
