--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include ':rxlifecycle', ':rxlifecycle-kotlin'
+include ':rxlifecycle'
 include ':rxlifecycle-components'
 include ':rxlifecycle-navi'
+include ':rxlifecycle-kotlin'
 include ':rxlifecycle-sample'
