--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
     }
 }
 
@@ -17,6 +18,8 @@ subprojects {
     group = GROUP
     version = VERSION_NAME
 }
+
+apply plugin: 'com.github.ben-manes.versions'
 
 ext {
     minSdkVersion = 14
