RxLifecycle Lint Check

--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -25,3 +25,27 @@ dependencies {
 
 apply from: "$rootDir/gradle/artifacts.gradle"
 apply from: "$rootDir/gradle/gradle-mvn-push.gradle"
+
+
+configurations {
+    lintChecks
+}
+
+dependencies {
+    lintChecks project(path: ":rxlifecycle-lint", configuration: "lintChecks")
+}
+
+task copyLintJar(type: Copy){
+    from (configurations.lintChecks) {
+        rename {
+            String fileName ->
+                'lint.jar'
+        }
+    }
+    into 'build/intermediates/lint/'
+}
+
+project.afterEvaluate{
+    def compileLintTask = project.tasks.find {it.name == 'compileLint'}
+    compileLintTask.dependsOn(copyLintJar)
+}
