--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':rxlifecycle-components'
 include ':rxlifecycle-navi'
 include ':rxlifecycle-kotlin'
 include ':rxlifecycle-sample'
+include ':rxlifecycle-lint'
