Make rxlifecycle core a pure Java project

--- a/rxlifecycle-android/build.gradle
+++ b/rxlifecycle-android/build.gradle
@@ -16,6 +16,8 @@ repositories {
 dependencies {
     compile project(':rxlifecycle')
 
+    compile rootProject.ext.rxBinding
+
     testCompile rootProject.ext.junit
     testCompile rootProject.ext.robolectric
 }
