--- a/build.gradle
+++ b/build.gradle
@@ -28,14 +28,16 @@ ext {
     targetSdkVersion = compileSdkVersion
     buildToolsVersion = '23.0.3'
 
+    sourceCompatibilityVersion = JavaVersion.VERSION_1_7
+    targetCompatibilityVersion = JavaVersion.VERSION_1_7
+
     // Define all dependencies in the base project, to unify & make it easy to update
     rxJava = 'io.reactivex:rxjava:1.1.4'
     rxBinding = 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     navi = 'com.trello:navi:0.2.0'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = 'com.android.support:appcompat-v7:23.3.0'
-    supportAnnotations = 'com.android.support:support-annotations:23.3.0'
+    jetbrainsAnnotations = 'org.jetbrains:annotations-java5:15.0'
     junit = 'junit:junit:4.12'
-    mockito = 'org.mockito:mockito-core:1.10.19'
     robolectric = 'org.robolectric:robolectric:3.0'
 }
