--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         //version here to share between build script and projects
         //todo https://github.com/JetBrains/kotlin/pull/775 : remove if it will be merged
-        verKotlin = '1.0.1-2'
+        verKotlin = '1.0.3'
     }
     repositories {
         jcenter()
@@ -11,7 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$verKotlin"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
@@ -37,8 +37,8 @@ ext {
     rxBinding = 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     navi = 'com.trello:navi:0.2.2'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
-    appCompat = 'com.android.support:appcompat-v7:23.3.0'
+    appCompat = 'com.android.support:appcompat-v7:24.2.0'
     jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.1'
     junit = 'junit:junit:4.12'
-    robolectric = 'org.robolectric:robolectric:3.0'
+    robolectric = 'org.robolectric:robolectric:3.1.2'
 }
