--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -14,4 +14,20 @@ dependencies {
     testCompile rootProject.ext.junit
 }
 
+// Add sources/javadoc artifacts
+task sourcesJar(type: Jar, dependsOn:classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn:javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 apply from: "$rootDir/gradle/gradle-mvn-push.gradle"
