--- a/rxlifecycle-navi/build.gradle
+++ b/rxlifecycle-navi/build.gradle
@@ -12,6 +12,8 @@ android {
 
 repositories {
     mavenCentral()
+
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
