--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,9 @@ ext {
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava2:rxjava:2.0.0'
-    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.0'
-    navi = 'com.trello.navi2:navi:2.0-SNAPSHOT'
+    rxJava = 'io.reactivex.rxjava2:rxjava:2.0.1'
+    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    navi = 'com.trello.navi2:navi:2.0'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = 'com.android.support:appcompat-v7:25.0.0'
     supportAnnotations = 'com.android.support:support-annotations:25.0.0'
