Remove RxBinding dependency The RxBinding library was only used for sending Notification when view gets detached but nothing else. Port the function over so methods count can be reduced.

--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,11 @@ ext {
 
     // Define all dependencies in the base project, to unify & make it easy to update
     rxJava = 'io.reactivex:rxjava:1.2.1'
-    rxBinding = 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    rxAndroid = 'io.reactivex:rxandroid:1.2.1'
     navi = 'com.trello:navi:1.0'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = 'com.android.support:appcompat-v7:25.0.0'
+    supportAnnotations = 'com.android.support:support-annotations:25.0.0'
     jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.1'
     junit = 'junit:junit:4.12'
     robolectric = 'org.robolectric:robolectric:3.1.4'
