--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ ext {
     targetSdkVersion = compileSdkVersion
     buildToolsVersion = '25'
 
+    supportLibVersion = '25.2.0'
+
     sourceCompatibilityVersion = JavaVersion.VERSION_1_7
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
@@ -37,8 +39,8 @@ ext {
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
     navi = 'com.trello.navi2:navi:2.0'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
-    appCompat = 'com.android.support:appcompat-v7:25.0.0'
-    supportAnnotations = 'com.android.support:support-annotations:25.0.0'
+    appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
+    supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
     jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.1'
     junit = 'junit:junit:4.12'
     robolectric = 'org.robolectric:robolectric:3.1.4'
