--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ ext {
     rxJava = 'io.reactivex.rxjava2:rxjava:2.0.6'
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
     navi = 'com.trello.navi2:navi:2.0'
+    lifecycle = 'android.arch.lifecycle:runtime:1.0.0-alpha1'
+    lifecycleProcessor = 'android.arch.lifecycle:compiler:1.0.0-alpha1'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
     supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
