--- a/rxlifecycle-android-lifecycle/build.gradle
+++ b/rxlifecycle-android-lifecycle/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -17,10 +16,17 @@ repositories {
 }
 
 dependencies {
-    compile kotlinStdlib
-    compile project(':rxlifecycle-android')
-    provided project(':rxlifecycle-android-lifecycle')
+    compile project(':rxlifecycle')
+
+    compile rootProject.ext.rxAndroid
+    compile rootProject.ext.supportAnnotations
+    compile rootProject.ext.lifecycle
+    annotationProcessor rootProject.ext.lifecycleProcessor
+
+    testCompile rootProject.ext.junit
+    testCompile rootProject.ext.robolectric
 }
 
 apply from: "$rootDir/gradle/artifacts.gradle"
 apply from: "$rootDir/gradle/gradle-mvn-push.gradle"
+
