--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         //version here to share between build script and projects
         //todo https://github.com/JetBrains/kotlin/pull/775 : remove if it will be merged
-        verKotlin = '1.1.0'
+        verKotlin = '1.1.2-3'
     }
     repositories {
         jcenter()
@@ -29,14 +29,14 @@ ext {
     targetSdkVersion = compileSdkVersion
     buildToolsVersion = '25'
 
-    supportLibVersion = '25.2.0'
+    supportLibVersion = '25.3.1'
     lifecycleVersion = '1.0.0-alpha1'
 
     sourceCompatibilityVersion = JavaVersion.VERSION_1_7
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava2:rxjava:2.0.6'
+    rxJava = 'io.reactivex.rxjava2:rxjava:2.1.0'
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
     navi = 'com.trello.navi2:navi:2.0'
     lifecycle = "android.arch.lifecycle:runtime:$lifecycleVersion"
@@ -44,7 +44,7 @@ ext {
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
     supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
-    jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.1'
+    jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.2'
     junit = 'junit:junit:4.12'
-    robolectric = 'org.robolectric:robolectric:3.2.2'
+    robolectric = 'org.robolectric:robolectric:3.3.2'
 }
