--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
 buildscript {
     ext {
         //version here to share between build script and projects
-        //todo https://github.com/JetBrains/kotlin/pull/775 : remove if it will be merged
-        verKotlin = '1.1.2-3'
+        verKotlin = '1.1.3-2'
     }
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$verKotlin"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
@@ -27,20 +26,21 @@ ext {
     minSdkVersion = 14
     compileSdkVersion = 25
     targetSdkVersion = compileSdkVersion
-    buildToolsVersion = '25'
+    buildToolsVersion = '25.0.3'
 
-    supportLibVersion = '25.3.1'
-    lifecycleVersion = '1.0.0-alpha1'
+    supportLibVersion = '25.4.0'
+    lifecycleVersion = '1.0.0-alpha4'
 
     sourceCompatibilityVersion = JavaVersion.VERSION_1_7
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava2:rxjava:2.1.0'
+    rxJava = 'io.reactivex.rxjava2:rxjava:2.1.1'
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
     navi = 'com.trello.navi2:navi:2.0'
     lifecycle = "android.arch.lifecycle:runtime:$lifecycleVersion"
     lifecycleProcessor = "android.arch.lifecycle:compiler:$lifecycleVersion"
+    lifecycleExtensions = "android.arch.lifecycle:extensions:$lifecycleVersion"
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
     supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
