--- a/rxlifecycle-components/build.gradle
+++ b/rxlifecycle-components/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile rootProject.ext.rxJava
 
     compile rootProject.ext.appCompat
+    compile rootProject.ext.preferenceCompat
 
     testCompile rootProject.ext.junit
     testCompile rootProject.ext.robolectric
