Updated gradle 4.4, support version, build tools version, kotlin version, rxjava, rxandroid …

--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -5,6 +5,8 @@ targetCompatibility = rootProject.ext.targetCompatibilityVersion
 
 repositories {
     mavenCentral()
+    jcenter()
+    google()
 }
 
 dependencies {
