--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 buildscript {
     ext {
         //version here to share between build script and projects
-        verKotlin = '1.1.4-3'
+        verKotlin = '1.2.50'
     }
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$verKotlin"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
@@ -25,11 +26,11 @@ apply plugin: 'com.github.ben-manes.versions'
 
 ext {
     minSdkVersion = 14
-    compileSdkVersion = 26
+    compileSdkVersion = 27
     targetSdkVersion = compileSdkVersion
-    buildToolsVersion = '26.0.2'
+    buildToolsVersion = '27.0.3'
 
-    supportLibVersion = '26.0.2'
+    supportLibVersion = '27.1.1'
     lifecycleVersion = '1.0.0'
     lifecycleRuntimeVersion = '1.0.3'
 
@@ -37,8 +38,8 @@ ext {
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava2:rxjava:2.1.3'
-    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    rxJava = 'io.reactivex.rxjava2:rxjava:2.1.14'
+    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.2'
     navi = 'com.trello.navi2:navi:2.0'
     lifecycle = "android.arch.lifecycle:runtime:$lifecycleRuntimeVersion"
     lifecycleProcessor = "android.arch.lifecycle:compiler:$lifecycleVersion"
