--- a/rxlifecycle/build.gradle
+++ b/rxlifecycle/build.gradle
@@ -4,7 +4,7 @@ sourceCompatibility = rootProject.ext.sourceCompatibilityVersion
 targetCompatibility = rootProject.ext.targetCompatibilityVersion
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
