Switch to updated dependency configurations

--- a/rxlifecycle-android-lifecycle-kotlin/build.gradle
+++ b/rxlifecycle-android-lifecycle-kotlin/build.gradle
@@ -17,8 +17,8 @@ repositories {
 }
 
 dependencies {
-    compile kotlinStdlib
-    compile project(':rxlifecycle-android-lifecycle')
+    implementation kotlinStdlib
+    api project(':rxlifecycle-android-lifecycle')
 }
 
 apply from: "$rootDir/gradle/artifacts.gradle"
