--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,9 @@ ext {
     lifecycleProcessor = "android.arch.lifecycle:compiler:$lifecycleVersion"
     lifecycleExtensions = "android.arch.lifecycle:extensions:$lifecycleVersion"
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
-    appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
-    preferenceCompat = "com.android.support:preference-v7:$supportLibVersion"
-    supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
+    //appCompat = "com.android.support:appcompat-v7:$supportLibVersion"
+    //preferenceCompat = "com.android.support:preference-v7:$supportLibVersion"
+    //supportAnnotations = "com.android.support:support-annotations:$supportLibVersion"
     jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.2'
     junit = 'junit:junit:4.12'
     robolectric = 'org.robolectric:robolectric:3.8'
