Updated Gradle wrapper and dependencies

--- a/rxlifecycle-android-lifecycle/build.gradle
+++ b/rxlifecycle-android-lifecycle/build.gradle
@@ -20,12 +20,12 @@ dependencies {
 
     implementation rootProject.ext.rxAndroid
     implementation rootProject.ext.supportAnnotations
-    api 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    api rootProject.ext.lifecycle
+    annotationProcessor rootProject.ext.lifecycleProcessor
 
     testImplementation rootProject.ext.junit
     testImplementation rootProject.ext.robolectric
-    testImplementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    testImplementation rootProject.ext.lifecycleExtensions
 }
 
 apply from: "$rootDir/gradle/artifacts.gradle"
