--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
     ext {
         //version here to share between build script and projects
-        verKotlin = '1.2.71'
+        verKotlin = '1.3.50'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$verKotlin"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.25.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
@@ -36,12 +36,12 @@ ext {
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava2:rxjava:2.2.3'
-    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    rxJava = 'io.reactivex.rxjava2:rxjava:2.2.12'
+    rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.1.1'
     navi = 'com.trello.navi2:navi:2.1.0'
-    lifecycle = "android.arch.lifecycle:runtime:$lifecycleRuntimeVersion"
-    lifecycleProcessor = "android.arch.lifecycle:compiler:$lifecycleVersion"
-    lifecycleExtensions = "android.arch.lifecycle:extensions:$lifecycleVersion"
+    lifecycle = "androidx.lifecycle:lifecycle-runtime:$lifecycleRuntimeVersion"
+    lifecycleProcessor = "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
+    lifecycleExtensions = "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
     appCompat = "androidx.appcompat:appcompat:$supportLibVersion"
     preferenceCompat = "androidx.preference:preference:$supportLibVersion"
