Migrate to rxjava3

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=dlew
 POM_DEVELOPER_NAME=Dan Lew
+
+android.enableJetifier=true
+android.useAndroidX=true
