--- a/rxlifecycle-sample/build.gradle
+++ b/rxlifecycle-sample/build.gradle
@@ -17,6 +17,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 repositories {
