--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         //version here to share between build script and projects
-        verKotlin = '1.3.50'
+        verKotlin = '1.3.72'
     }
     repositories {
         google()
@@ -11,7 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$verKotlin"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$verKotlin"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.25.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.28.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
@@ -28,25 +28,21 @@ ext {
     compileSdkVersion = 28
     targetSdkVersion = compileSdkVersion
 
-    supportLibVersion = '1.1.0'
-    lifecycleVersion = '2.1.0'
-    lifecycleRuntimeVersion = '2.1.0'
-
     sourceCompatibilityVersion = JavaVersion.VERSION_1_7
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Define all dependencies in the base project, to unify & make it easy to update
-    rxJava = 'io.reactivex.rxjava3:rxjava:3.0.3'
+    rxJava = 'io.reactivex.rxjava3:rxjava:3.0.4'
     rxAndroid = 'io.reactivex.rxjava3:rxandroid:3.0.0'
     navi = 'com.trello.navi2:navi:2.1.0'
-    lifecycle = "androidx.lifecycle:lifecycle-runtime:$lifecycleRuntimeVersion"
-    lifecycleProcessor = "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
-    lifecycleExtensions = "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    lifecycle = 'androidx.lifecycle:lifecycle-runtime:2.2.0'
+    lifecycleProcessor = 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    lifecycleExtensions = 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     kotlinStdlib = "org.jetbrains.kotlin:kotlin-stdlib:$verKotlin"
-    appCompat = "androidx.appcompat:appcompat:$supportLibVersion"
-    preferenceCompat = "androidx.preference:preference:$supportLibVersion"
-    supportAnnotations = "androidx.annotation:annotation:$supportLibVersion"
+    appCompat = 'androidx.appcompat:appcompat:1.1.0'
+    preferenceCompat = 'androidx.preference:preference:1.1.1'
+    supportAnnotations = 'androidx.annotation:annotation:1.1.0'
     jsr305Annotations = 'com.google.code.findbugs:jsr305:3.0.2'
-    junit = 'junit:junit:4.12'
+    junit = 'junit:junit:4.13'
     robolectric = 'org.robolectric:robolectric:3.8'
 }
