--- a/rxlifecycle-android-lifecycle-kotlin/src/main/AndroidManifest.xml
+++ b/rxlifecycle-android-lifecycle-kotlin/src/main/AndroidManifest.xml
@@ -1,1 +1,1 @@
-<manifest package="me.tatarka.rxlifecycle_android_lifecycle_kotlin" />
+<manifest package="com.trello.rxlifecycle4.android.lifecycle.kotlin" />
