Namespace Kotlin module names
Otherwise you can't use different major versions of RxLifecycle side-by-side
due to the generated .kotlin_module file.

--- a/rxlifecycle-kotlin/build.gradle
+++ b/rxlifecycle-kotlin/build.gradle
@@ -8,6 +8,10 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
     }
+
+    kotlinOptions {
+        freeCompilerArgs += ["-module-name", "rxlifecycle-kotlin-4"]
+    }
 }
 
 repositories {
