--- a/rxlifecycle-android-lifecycle-kotlin/build.gradle
+++ b/rxlifecycle-android-lifecycle-kotlin/build.gradle
@@ -8,6 +8,10 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
     }
+
+    kotlinOptions {
+        freeCompilerArgs += ["-module-name", "rxlifecycle-android-lifecycle-kotlin-4"]
+    }
 }
 
 repositories {
